src/scss/components/_header-forms.scss
// Styles for forms included in page headers
// sass-lint:disable class-name-format nesting-depth no-qualifying-elements

@mixin validation-message-inline-reset {
  background-color: transparent;
  border-radius: 0;
  color: $brand-danger;
  display: flex;
  flex: 1 0 75%;
  font-size: $font-size-xs;
  line-height: 1.65;
  margin-bottom: .5rem;
  margin-left: 25%;
  margin-top: .25rem;
  max-width: 75%;
  padding: 0;
  position: static;
}

.header-form {
  // For header forms on landing pages (full width form at -sm breakpoint)
  &.header-form-landing {
    .gform_wrapper {
      .gfield_error {
        .validation_message {
          @include media-breakpoint-only(sm) {
            @include validation-message-inline-reset();
          }

          &::after {
            @include media-breakpoint-only(sm) {
              display: none;
            }
          }
        }
      }
    }
  }

  // For header forms embedded in modals
  &.header-form-modal {
    .gform_wrapper {
      .gfield_error {
        .validation_message {
          @include media-breakpoint-only(md) {
            @include validation-message-inline-reset();
          }

          &::after {
            @include media-breakpoint-only(md) {
              display: none;
            }
          }
        }
      }
    }
  }

  // For header forms with a white bg (assume default of .bg-inverse-*)
  &.bg-secondary {
    .gf_progressbar {
      background-color: $progress-bg;
    }

    .gform_wrapper {
      .clear-multi label,
      .ginput_container_address label,
      .ginput_container_name label,
      .gfield_list_container th,
      .gfield_description {
        color: $sublabel-color-aw;
      }

      .gfield_error {
        .gfield_label,
        .ginput_container_name label,
        .ginput_container_address label,
        .clear-multi label {
          color: $brand-danger-aw; // use darker text against white
        }

        .validation_message {
          @include media-breakpoint-only(xs) {
            color: $brand-danger-aw; // use darker text against white
          }
        }
      }
    }

    &.header-form-landing {
      .gform_wrapper {
        .gfield_error {
          .validation_message {
            @include media-breakpoint-only(sm) {
              color: $brand-danger-aw; // use darker text against white
            }
          }
        }
      }
    }

    &.header-form-modal {
      .gform_wrapper {
        .gfield_error {
          .validation_message {
            @include media-breakpoint-between(sm, md) {
              color: $brand-danger-aw; // use darker text against white
            }
          }
        }
      }
    }
  }

  //
  // Styles for baseline header forms begin here:
  //

  // Form titles
  .gform_title {
    font-size: $font-size-h5;

    @include media-breakpoint-up(sm) {
      font-size: $font-size-h5-md;
    }
  }

  // Heading above a multipage form's progress bar
  .gf_progressbar_title {
    font-weight: normal;
    text-transform: none;
  }

  // Wrapper for a multipage form's progress bar
  .gf_progressbar {
    background-color: $progress-inverse-bg;
  }

  // Base form labels
  .gfield_label {
    font-size: $font-size-xs;
    font-weight: 600;
    text-transform: uppercase;
  }

  // Contains the entire <form>
  .gform_wrapper {
    // Wrapper element surrounding all form fields + submit btn
    .gform_body {
      margin-bottom: 1.25rem;
      margin-top: 1.25rem;
    }

    // Wrapper element that surrounds a single field
    // or a field group (e.g. name, address)
    .ginput_container {
      .instruction {
        font-size: .75rem;
        margin-top: .25rem;
      }
    }

    // <ul> that contains all form fields. Additional classes on this element
    // control label, sublabel, and description alignment for the form fields
    .gform_fields {
      &.top_label {
        .gfield {
          flex-direction: column;
          margin-bottom: 1.25rem;
        }

        .gfield_label {
          margin-bottom: .5rem;
        }
      }

      &.left_label {
        .gfield {
          align-items: center;
          flex-direction: row;
          margin-bottom: .75rem;
        }

        .gfield_label {
          flex: 0 0 25%;
          margin-bottom: 0;
          max-width: 25%;
          padding-right: .5rem;
        }

        .ginput_container {
          flex: 0 0 75%;
          max-width: 75%;
        }
      }

      // NOTE: right-aligned labels are not supported
    }

    // <li> that contains a single form input or group,
    // its label, and its description
    .gfield {
      display: flex;
      flex-wrap: wrap;

      // Override to support top-aligned field descriptions
      &.field_description_above {
        .gfield_description {
          margin-bottom: .75rem;
          margin-top: -.25rem;
        }
      }
    }

    // A field's description text
    .gfield_description {
      color: $sublabel-color;
      font-size: $font-size-xs;
    }

    // Inner field group labels
    .clear-multi label,
    .ginput_container_address label,
    .ginput_container_name label,
    .gfield_list_container th {
      color: $sublabel-color;
      letter-spacing: 0;
    }

    // Wrapper element for a submit btn, or prev/next btns on multipage forms
    .gform_footer,
    .gform_page_footer {
      margin-top: 1.25rem;
    }

    // A form submit button. (Excludes multipage prev/next btns)
    .gform_button {
      @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
      @include button-variant-overrides($btn-primary-color, $btn-primary-bg, $btn-primary-border);
      display: block;
      width: 100%;

      @include media-breakpoint-only(md) {
        font-size: $font-size-sm;
      }
    }

    .gfield_error {
      position: relative;

      .gfield_label,
      .ginput_container_name label,
      .ginput_container_address label,
      .clear-multi label {
        color: $brand-danger; // catch sublabels
      }

      .ginput_container {
        // Prioritize validation messages outside of .ginput_container
        // when more than one validation message is present
        .validation_message {
          display: none;
        }
      }

      .validation_message {
        @include media-breakpoint-only(xs) {
          @include validation-message-inline-reset();
        }

        @include media-breakpoint-up(sm) {
          background: $brand-danger;
          border-radius: $border-radius $border-radius 0 $border-radius;
          bottom: 0;
          color: $brand-danger-color;
          font-size: .7rem;
          line-height: 1.2;
          margin: 0;
          padding: .5rem;
          position: absolute;
          right: calc(100% + 2.25rem);
          width: 140px;
        }

        &::after {
          @include media-breakpoint-up(sm) {
            border-color: transparent transparent transparent $brand-danger;
            border-style: solid;
            border-width: 8px 0 0 8px;
            bottom: 0;
            content: '';
            display: block;
            height: 0;
            position: absolute;
            right: -8px;
            width: 0;
          }
        }

        // Make sure we only display one message at a time
        + .validation_message {
          display: none;
        }
      }
    }

    // Honeypot field
    .gform_validation_container {
      display: none;
    }

    // Administrative, hidden fields
    input[type=hidden],
    input.gform_hidden,
    .gform_hidden,
    .gf_hidden,
    .field_admin_only,
    .gfield_visibility_administrative {
      display: none;
    }

    .gfield_visibility_hidden,
    .gf_invisible {
      @include invisible();
    }
  }

  .validation_error {
    @include sr-only();
  }

  .privacy-policy-link {
    color: inherit;
    text-decoration: underline;
  }
}

